<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ProfileActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:weightSum="2">
           <TextView
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:id="@+id/textViewLoggedUser"
               android:text="@string/welcome_user"
               android:layout_gravity="center"
               android:textSize="25sp"
               android:layout_weight="1"
               android:layout_marginStart="20dp"/>

           <ImageView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center_horizontal"
               android:layout_weight="1"
               android:layout_marginEnd="20dp"
               android:src="@drawable/profilepic" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:weightSum="4"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:id="@+id/bio_description"
               android:text="@string/bio_description"
               android:layout_gravity="start"
               android:textSize="20sp"
               android:layout_weight="3"/>

           <ImageButton
               android:layout_width="50dp"
               android:layout_height="match_parent"
               android:src="@drawable/edit"
               android:layout_marginRight="20dp"/>

       </LinearLayout>

       <View
           android:id="@+id/upperDivision"
           android:layout_marginTop="30dp"
           android:background="@color/colorBlack"
           android:layout_width="match_parent"
           android:layout_height="1dp"/>

       <LinearLayout
           android:weightSum="3"
           android:id="@+id/container"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:layout_weight="1"
               android:padding="16dp"
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <TextView
                   android:id="@+id/textViewPosts"
                   android:textSize="18sp"
                   android:layout_gravity="center_horizontal"
                   android:text="0"
                   android:textColor="@color/colorBlack"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <TextView
                   android:textSize="20sp"
                   android:text="@string/profile_label_posts"
                   android:textColor="@color/colorBlack"
                   android:layout_gravity="center_horizontal"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
           </LinearLayout>

           <LinearLayout
               android:layout_weight="1"
               android:padding="16dp"
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <TextView
                   android:id="@+id/textViewSubs"
                   android:textSize="18sp"
                   android:layout_gravity="center_horizontal"
                   android:text="0"
                   android:textColor="@color/colorBlack"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <TextView
                   android:textSize="20sp"
                   android:text="@string/profile_label_subs"
                   android:layout_gravity="center_horizontal"
                   android:textColor="@color/colorBlack"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
           </LinearLayout>

           <LinearLayout
               android:layout_weight="1"
               android:padding="16dp"
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <TextView
                   android:id="@+id/textViewReplies"
                   android:textSize="18sp"
                   android:layout_gravity="center_horizontal"
                   android:text="0"
                   android:textColor="@color/colorBlack"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <TextView
                   android:textSize="20sp"
                   android:layout_gravity="center_horizontal"
                   android:text="@string/profile_label_replies"
                   android:textColor="@color/colorBlack"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
           </LinearLayout>


       </LinearLayout>

       <View
           android:id="@+id/lowerDivision"
           android:background="@color/colorBlack"
           android:layout_width="match_parent"
           android:layout_height="1dp"/>

       <android.support.v7.widget.AppCompatButton
           android:id="@+id/btn_share"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="50dp"
           android:background="@color/colorGrey"
           android:textColor="@color/colorWhite"
           android:text="@string/share"
           android:layout_gravity="center"
           android:drawableStart="@drawable/share"
           android:padding="12dp" />

   </LinearLayout>

</ScrollView >